openshift/deployments/preprod/mem-sizing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-runner
spec:
  template:
    spec:
      containers:
      - name: k8s-java-runner
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            memory: "500Mi"
            cpu: "500m"
